--- a/styles.css
+++ b/styles.css
@@ -93,9 +93,7 @@ body {
 }
 
 .start:hover,
-.start:focus,
-.reset:hover,
-.reset:focus {
+.reset:hover {
     background-color: #ccc;
     cursor: pointer;
 }
